<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/darkBg"
    tools:context="bit.gearl1.googlemapsapi.MainActivity">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity"
        android:layout_below="@+id/tbLblInstructions"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/clear_route"
        android:layout_height="wrap_content"
        android:id="@+id/btnClearRoute"
        android:textAllCaps="true"
        android:layout_width="175dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btnSaveRoute" />

    <Button
        android:text="@string/save_route"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveRoute"
        android:layout_width="175dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/route_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/tbLblInstructions"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_below="@+id/spinnerRouteMethod"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_height="30dp"
        android:id="@+id/spinnerRouteMethod"
        android:textColor="@color/white"
        android:background="@color/white"
        android:textAlignment="center"
        android:layout_width="320dp"
        android:layout_below="@+id/btnClearRoute"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
