<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_route_and_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/darkBg"
    tools:context="com.example.op_bit.weatherplanner.DisplayRouteAndWeatherActivity">

    <Button
        android:text="@string/change_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChangeRoute"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">
        <View
            android:layout_height="2dip"
            android:paddingBottom="12sp"
            android:background="@color/gold" />
        <TableRow
            android:layout_height="match_parent"
            android:layout_below="@+id/spinnerShowDate"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent">

            <TextView
                android:text="@string/start_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvLblStartPoint"
                android:textSize="16sp"
                android:textStyle="normal|bold" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvOutputStartPoint"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/end_location"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLblStartPos"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:id="@+id/tvLblEndPoint"
                android:textSize="16sp"
                android:textStyle="normal|bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvOutputEndPoint"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:id="@+id/spinnerShowDate"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvLblWeather" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLblTemp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_above="@+id/tvLblHumidity"
                android:layout_marginBottom="10dp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvOutputTemp"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_alignBaseline="@+id/tvLblTemp"
                android:layout_alignBottom="@+id/tvLblTemp"
                android:layout_toEndOf="@+id/tvOutputHumidity" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLblHumidity"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_above="@+id/tvLblPressure"
                android:layout_alignStart="@+id/tvLblTemp"
                android:layout_alignEnd="@+id/tvLblTemp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvOutputHumidity"
                android:layout_marginBottom="10dp"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvLblPressure"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_above="@+id/tvLblWindSpeed"
                android:layout_alignEnd="@+id/tvLblTemp"
                android:layout_alignStart="@+id/tvLblHumidity"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_alignBottom="@+id/tvLblPressure"
                android:layout_toEndOf="@+id/tvOutputHumidity"
                android:id="@+id/tvOutputPressure"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvLblWindSpeed"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/tvLblPressure"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_alignBottom="@+id/tvLblWindSpeed"
                android:layout_alignStart="@+id/tvOutputPressure"
                android:id="@+id/tvOutputWindSpeed"
                android:textSize="16sp" />
        </TableRow>
        <View
            android:layout_height="2dip"
            android:paddingTop="12dp"
            android:background="@color/gold" />
    </TableLayout>

    <TextView
        android:text="@string/spinner_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/tvLblWeather"
        android:textStyle="normal|bold"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/btnChangeRoute"
        android:layout_alignParentStart="true" />

</RelativeLayout>
